--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "typings": "./lib/index.d.ts",
   "scripts": {
     "deploy": "npm publish",
-    "tsc": "tsc",
+    "tsc": "tsc --skipLibCheck",
     "build": "npm run clean && npm run tsc",
     "clean": "npx rimraf lib/*",
     "lint": "tslint --project tsconfig.json --fix -c tslint.json -e \"src/**/__mocks__/*.ts\" -e \"src/**/__tests__/*.ts\" -e \"test/**/*.ts\" \"src/**/*.ts\"",
@@ -23,32 +23,32 @@
     ]
   },
   "dependencies": {
-    "inversify": "~5.1.1",
-    "inversify-express-utils": "~6.4.3",
-    "swagger-ui-express": "~4.5.0",
-    "helmet": "~5.1.1",
-    "winston": "~3.8.2",
-    "morgan": "~1.10.0",
     "compression": "~1.7.4",
     "cors": "~2.8.5",
-    "express": "~4.18.2"
+    "express": "~4.18.2",
+    "helmet": "~5.1.1",
+    "inversify": "~5.1.1",
+    "inversify-express-utils": "~6.4.3",
+    "morgan": "~1.10.0",
+    "swagger-ui-express": "~4.5.0",
+    "winston": "~3.8.2"
   },
   "devDependencies": {
-    "@types/swagger-ui-express": "4.1.3",
-    "@types/morgan": "1.9.3",
-    "@types/helmet": "4.0.0",
     "@types/compression": "1.7.1",
     "@types/cors": "2.8.12",
     "@types/express": "4.17.13",
+    "@types/helmet": "4.0.0",
+    "@types/morgan": "1.9.3",
+    "@types/swagger-ui-express": "4.1.3",
+    "copyfiles": "~2.4.1",
+    "husky": "~7.0.4",
     "lint-staged": "~11.1.4",
     "prettier": "2.4.0",
     "rimraf": "~3.0.2",
     "tslint": "~6.1.3",
     "tslint-config-prettier": "~1.18.0",
     "tslint-config-standard": "9.0.0",
-    "typescript": "3.9.10",
-    "copyfiles": "~2.4.1",
-    "husky": "~7.0.4"
+    "typescript": "^5.3.3"
   },
   "author": "dptolle",
   "license": "MIT",
